--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Spotify</title>
 </head>
 <body>
-    
+
+    <main>
+        <section class="main-container">
+            <div class="left-menu">left menu</div>
+
+            <div class="main-feed">
+                <header>
+                    <div class="header">header</div>
+                </header>
+            </div>
+
+            <div class="footer">footer</div>
+        </section>
+    </main>
+
 </body>
 </html>
