left-menuerrors fixed

--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
                     <li class="list-item-greyed"> <img src="./assets/img/libreria.svg" alt="library icon"> Your Library</li>
                 </ul>
 
-                <ul class="playlist">
-                    <li class="playlist-greyed"> <i class="fa-solid fa-plus"></i> Create Playlist</li>
-                    <li> <i class="fa-solid fa-heart"></i> Liked Songs</li>
+                <ul>
+                    <li class="playlist"> <i class="fa-solid fa-plus"></i> Create Playlist</li>
+                    <li class="playlist"> <i class="fa-solid fa-heart"></i> Liked Songs</li>
+
                     <hr>
+
+                    <li class="playlist playlist-names"> <p >90's and 00's nolsalgia 🥺</p> </li>
+                    <li class="playlist playlist-names"> <p>My Everyday favourites playlist 🇬🇧🇺🇸</p> </li>
+                    <li class="playlist playlist-names" > <p>Afrobeats🤎🔥</p> </li>
                 </ul>
             </div>
 
