left menu complete

--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@
                     <li class="playlist"> <i class="fa-solid fa-plus"></i> Create Playlist</li>
                     <li class="playlist"> <i class="fa-solid fa-heart"></i> Liked Songs</li>
 
-                    <hr>
+                    <hr id="playlist-hr">
 
-                    <li class="playlist playlist-names"> <p >90's and 00's nolsalgia 🥺</p> </li>
+                    <li class="playlist playlist-names"> <p >90's and 00's nostalgia 🥺</p> </li>
                     <li class="playlist playlist-names"> <p>My Everyday favourites playlist 🇬🇧🇺🇸</p> </li>
-                    <li class="playlist playlist-names" > <p>Afrobeats🤎🔥</p> </li>
+                    <li class="playlist playlist-names bottom" > <p>Afrobeats🤎🔥</p> </li>
+                </ul>
+
+                <ul class="install-app">
+                    <li><img src="./assets/img/download.svg" alt="" class="install-icon"> Install App</li>
+                    <hr id="install-app-hr">
+
+                    <li><img src="./assets/img/profile.svg" alt="profile icon" class="profile">Lorel.ao</li>
                 </ul>
             </div>
 
