footer quater complete. All other grid layouts complete.

--- a/index.html
+++ b/index.html
@@ -283,7 +283,16 @@
                 </div>
 
 
-            <div class="footer">footer</div>
+                <div class="footer">
+
+                <div class="currentplaying">
+                    <img src="./assets/img/adeleplayercontrols.png" alt="" width="60" height="60">
+                    <div class="songnameandartist"><p>Easy On Me Adele</p> 
+                    <img src="./assets/img/heart_icon.svg" alt="" width="25" height="25" class="miniicons">
+                    <img src="./assets/img/miniplayer_icon.svg" alt="" class="miniicons"> </div>
+                </div>
+                
+            </div>
         </section>
     </main>
 
